margin fix for sidebar trigger on mobile

--- a/css/yt1300.topbar.css
+++ b/css/yt1300.topbar.css
@@ -37,7 +37,7 @@ nav#primary-navigation {
 
 .second {
   float: right;
-  margin: 0 .5em;
   display: inline; }
   .second .genericon {
-    font-size: 48px; }
+    font-size: 48px;
+    padding: 0 1em 0 0; }
