--- a/inc/topbar.scss
+++ b/inc/topbar.scss
@@ -43,10 +43,11 @@ nav#primary-navigation  {
 
 .second {
   float:right;
-  margin: 0 .5em;
+
   display:inline;
   .genericon {
     font-size: 48px;
+    padding: 0 1em 0 0;
   }
 }
 
